[2단계 - 블랙잭 (배팅)] 도기(김동호) 미션 제출합니다. (#523)
* remove: 모든 클래스 삭제

* docs(README): 2단계 요구사항 정리

* feat(Suit): Suit 클래스 추가

* feat(Denomination): Denomination 클래스 추가

* feat(Card): Card 클래스 추가

* test(Card): 점수를 반환하는 기능 구현

* test(Denomination): ACE 카드인지 알려주는 기능 구현

* test(CardTest): 파라미터에 final 키워드 추가

* test(Hand): 가지고 있는 Card 들의 총점을 계산하는 기능 구현

* rename: card 패키지를 domain 패키지 내로 이동

* test(DeckTest): Deck 클래스 기능 구현

- 52장의 트럼프 카드를 가진다.
- 가지고 있는 카드 한 장을 준다.

* docs(READEM): 요구사항 수정 및 Action 클래스 내용 작성

* docs(READEM): Action 클래스 제거

* feat(Player): Player 클래스 구현

* feat(Money): Money 클래스 구현

* feat(Hand): 카드를 추가로 받는 기능 구현

* feat(Money): 돈을 더 받는 기능과 지출하는 기능 구현

* feat(Participant): Participant 클래스 구현

* test(PlayersTest): 최소 2명에서 최대 8명의 플레이어를 생성하는 기능 구현

* feat(Money): equals&hashCode 재정의

* test(BankTest): 플레이어의 배팅 금액을 반환하는 기능 구현

* feat(Hand): 버스트인지 확인하는 기능과 블랙잭인지 확인하는 기능 구현

* feat(Participant): 버스트인지 혹은 블랙잭인지 확인하는 기능 구현

* test(Hand): 상대방의 카드와 비교하여 결과를 비교하는 기능 구현

* feat(Dealer): Dealer 클래스 구현

* feat(Player): equals & hashCode 재정의

* feat(Result): Result 클래스 구현

* docs(README): BlackjackGame 주요 속성및 역할 수정

* feat(Players): getPlayers 구현

* feat(Dealer): get 메서드 추가

* feat(BlackjackGame): Bank에 Player의 배팅 금액을 저장하는 기능 구현

* docs(README): 요구사항 수정

* refactor: 클래스에 final 키워드 추가

* feat(Participant): 자신이 버스트인지 확인하는 기능 구현

* test(Dealer): Bank에 플레이어의 배팅 금액을 지정하는 기능 테스트

* test(DeckTest): 가지고 있는 두 장의 카드를 뽑는 기능 테스트

* feat(Participant): Hand를 받는 기능 구현

* test(Player): 호출되고 있는 메서드 테스트

* docs(README): 궁금했던 점 추가

* test(Players): 초기 Hand를 받아 Player들에게 나눠주는 기능 테스트

* dcos(README): 궁금했던 점 수정

* feat(Dealer): Player들에게 카드를 2장씩 나눠주는 기능 구현

* docs(README): 기능 구현 완료한 내용 체크

* test(Dealer): 스스로 2장의 카드를 세팅하는 기능 테스트

* test(Dealer): 한 장의 카드를 보여주는 기능 테스트

* test(Dealer): 딜러의 점수가 16점 이하라면, 16점을 초과할 때까지 카드를 뽑는 기능 테스트

* docs(README): BlackjackGame 속성과 역할 수정

* refactor(BlackjackGame): getPlaye